@@ -49,6 +49,7 @@ Bug fixes
  * ``send_mail`` now correctly uses the ``html_message`` kwarg for HTML messages (Tiago Requeijo)
  * Page copying no longer allowed if page model has reached its ``max_count`` (Andy Babic)
  * Don't show page type on page chooser button when multiple types are allowed (Thijs Kramer)
+ * Make sure page chooser search results correspond to the latest search by canceling previous requests (Esper Kuijs)
 
 
 Upgrade considerations
