@@ -33,6 +33,7 @@ Changelog
  * Fix: `send_mail` now correctly uses the `html_message` kwarg for HTML messages (Tiago Requeijo)
  * Fix: Page copying no longer allowed if page model has reached its `max_count` (Andy Babic)
  * Fix: Don't show page type on page chooser button when multiple types are allowed (Thijs Kramer)
+ * Fix: Make sure page chooser search results correspond to the latest search by canceling previous requests (Esper Kuijs)
 
 
 2.4 (19.12.2018)
